<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:stretchColumns="1">

    <TableRow android:background="#03A9F4">

        <TextView
            android:layout_column="0"
            android:layout_span="2"
            android:padding="3dip"
            android:text="@string/reference_detail"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18dp"
            android:gravity="center_horizontal" />

    </TableRow>
    <TableRow>
        <TextView
            android:id="@+id/lbl_id"
            android:gravity="center_vertical|end"
            android:text="@string/id"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/txt_id"
            android:clickable="true"
            android:ems="10"
            android:focusable="false"
            android:gravity="end"
            android:inputType="number" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/lbl_desc"
            android:layout_marginLeft="8dp"
            android:gravity="center_vertical|end"
            android:text="@string/description"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_desc"
            android:layout_height="300px"
            android:ems="10"
            android:gravity="top|left"
            android:inputType="textMultiLine" />
    </TableRow>
    <TableRow>
        <TextView
            android:id="@+id/lbl_url"
            android:gravity="center_vertical|end"
            android:text="@string/url"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginLeft="28dp" />

        <EditText
            android:id="@+id/txt_url"
            android:layout_height="300px"
            android:ems="10"
            android:gravity="top|left"
            android:inputType="textMultiLine"
            tools:ignore="RtlHardcoded,TextFields" />

    </TableRow>
    <TableRow>
        <TextView
            android:id="@+id/lbl_startdate"
            android:gravity="center_vertical|end"
            android:text="@string/start_date"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            android:layout_marginLeft="28dp" />

        <EditText
            android:id="@+id/txt_startdate"
            android:ems="10"
            android:gravity="left"
            android:inputType="date"
            tools:ignore="MissingConstraints" />

    </TableRow>
    <TableRow>

        <TextView
            android:id="@+id/lbl_metadata"
            android:layout_height="200px"
            android:layout_marginLeft="28dp"
            android:gravity="top|center_vertical"
            android:text="@string/metadata"
            android:textSize="18sp"
            android:textStyle="bold" />

        <me.gujun.android.taggroup.TagGroup
            android:id="@+id/tag_metadata"
            style="@style/TagGroup"
            app:atg_isAppendMode="true" />
<!--
        <EditText
            android:id="@+id/txt_metadata"
            android:ems="10"
            android:gravity="left"
            android:inputType="text"
            tools:ignore="MissingConstraints" />
-->

    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/btn_viewref"
            android:layout_span="2"
            android:text="@string/view_reference" />

    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/btn_cancel"
            android:text="@string/cancel"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="60dp" />

        <Button
            android:id="@+id/btn_ok"
            android:text="@string/ok"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="271dp" />
    </TableRow>
</TableLayout>

